<resources>
    <string name="app_name">Corona-Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics_death_numbers">Número de mortes</string>
    <string name="statistics_card_text_confirmed_cases">Casos Confirmados.</string>
    <string name="statistics_card_text_confirmed_cases_100k">Casos confirmados por 100 mil habitantes</string>
    <string name="statistics_card_text_death_rate">Taxa de mortalidade.</string>
    <string name="statistics_card_text_populacao_estimada">População estimada.</string>
    <string name="oque_e_sars_cov_2_titulo">Oque é SARS-CoV-2?</string>
    <string name="oque_e_sars_cov_2_text">\tCovid-19 é uma infecção respiratória aguda causada pelo coronavírus SARS-CoV-2, potencialmente grave, de elevada transmissibilidade e de distribuição global.\n\n O SARS-CoV-2 é um betacoronavírus descoberto em amostras de lavado broncoalveolar obtidas de pacientes com pneumonia de causa desconhecida na cidade de Wuhan, província de Hubei, China, em dezembro de 2019. Pertence ao subgênero Sarbecovírus da família Coronaviridae e é o sétimo coronavírus conhecido a infectar seres humanos.\n\n Os coronavírus são uma grande família de vírus comuns em muitas espécies diferentes de animais, incluindo o homem, camelos, gado, gatos e morcegos. Raramente os coronavírus de animais podem infectar pessoas e depois se espalhar entre seres humanos como já ocorreu com o MERS-CoV e o SARS-CoV-2. Até o momento, não foi definido o reservatório silvestre do SARS-CoV-2.</string>
    <string name="oque_e_sars_cov_2_fonte">https://www.gov.br/saude/pt-br/coronavirus/o-que-e-o-coronavirus</string>
    <string name="menu_card_view_virus_text">O que é a SARS-Cov-2</string>
    <string name="menu_text_card_view_tips">Dicas de Prevenção</string>
    <string name="menu_text_card_view_about_vaccine">Sobre a Vacina</string>
    <string name="menu_text_card_view_statistics">Estatísticas do Covid-19</string>
    <string name="ic_menu_card_view_virus_description">Ícone de Virus.</string>
    <string name="ic_menu_card_view_prevention_tips_description">Ícone de Livro.</string>
    <string name="ic_menu_card_view_about_vaccine_description">Ícone de Seringa.</string>
    <string name="ic_menu_card_view_statistics_description">Ícone de Gráfico em Barra.</string>
    <string name="home_card_view_virus_text">O que é a SARS-Cov-2</string>
    <string name="home_text_card_view_tips">Dicas de Prevenção</string>
    <string name="home_text_card_view_about_vaccine">Sobre a Vacina</string>
    <string name="home_text_card_view_statistics">Estatísticas do Covid-19</string>
    <string name="ic_home_card_view_virus_description">Ícone de Virus.</string>
    <string name="ic_home_card_view_prevention_tips_description">Ícone de Livro.</string>
    <string name="ic_home_card_view_about_vaccine_description">Ícone de Seringa.</string>
    <string name="ic_home_card_view_statistics_description">Ícone de Gráfico em Barra.</string>
    <string name="home_text_title">Informações para você</string>
    <string name="home_text_description">Bem vindo(a), aqui você encontra informações relevantes a respeito do Covid-19</string>
    <string name="ic_statistics_card_view_death_numbers_description">Ícone de gráfico em barra.</string>
    <string name="ic_statistics_card_view_confirmed_cases_description">Ícone de confirmação.</string>
    <string name="ic_statistics_card_view_death_rate_description">Ícone de pessoa doente.</string>
    <string name="ic_statistics_card_view_estimated_population_description">Ícone de duas pessoas, em dupla.</string>
    <string name="ic_statistics_card_view_confirmed_cases_100k_description">Ícone de gráfico em linha com curva.</string>
    <string name="text_dirty_hands_tip">Não espirre na palma da sua mão</string>
    <string name="text_sneeze_tip">Ao espirrar use o antebraço ou o cotovelo</string>
    <string name="text_hand_shake_virus_tip">Não toque nos olhos, boca e/ou nariz com as mãos</string>
    <string name="text_face_mask_tip">Use sempre a máscara e, se possível, use luvas</string>
    <string name="text_virus_spread_tip">Evite aglomerações de pessoas</string>
    <string name="text_distance_tip">Mantenha distancia de no mínimo 1.5M de outras pessoas</string>
    <string name="text_washing_hands_tip">Lave bem as mãos frequentemente com água e sabão</string>
    <string name="text_stay_home_tip">Se possível fique em casa!</string>
    <string name="ic_dirty_hands_description">Mãos contaminadas</string>
    <string name="ic_sneeze_description">Homem espirrando</string>
    <string name="ic_hand_shake_virus_description">Aperto de mãos contaminadas</string>
    <string name="ic_face_mask_description">Homem de máscara no rosto</string>
    <string name="ic_virus_spread_description">Cadeia de contaminação</string>
    <string name="ic_distance_description">Distanciamento entre pessoas</string>
    <string name="ic_washing_hands_description">Lavando as mãos</string>
    <string name="ic_stay_home_description">Pessoa dentro de casa</string>
    <string name="ic_wrong_description">Ícone de Xis vermelho</string>
    <string name="ic_check_description">Ícone de correto verde</string>
    <string name="about_vaccine_title">Sobre a vacina</string>
    <string name="about_vaccine_fonte">https://butantan.gov.br/covid/butantan-tira-duvida/tira-duvida-noticias/quais-sao-as-diferencas-entre-as-vacinas-contra-covid-19-que-estao-sendo-aplicadas-no-brasil</string>
    <string name="about_vaccine_text">Vacinar-se é um ato necessário para a proteção individual e coletiva. Por meio dele, algumas doenças já foram erradicadas, como a varíola e a poliomielite. E, apesar de nenhuma vacina ser 100% eficaz, hoje a imunização é essencial para prevenir óbitos, casos graves da Covid-19 e para conter a pandemia.\n\nQuatro vacinas contra a doença já receberam autorização da Agência Nacional de Vigilância Sanitária (Anvisa) para uso no Brasil: CoronaVac, vacina do Butantan produzida em parceria com a biofarmacêutica chinesa Sinovac, e os imunizantes das empresas AstraZeneca, Pfizer e Janssen; mas somente as três primeiras estão sendo utilizadas no Programa Nacional de Imunizações (PNI), do Ministério da Saúde, até o momento. Um levantamento de um consórcio de veículos de imprensa junto às secretarias da saúde mostra que até o dia 23/5 haviam sido aplicadas 62,6 milhões de doses nos brasileiros, sendo que a CoronaVac responde por 47,2 milhões delas.\n\nVale ressaltar que comparar a eficácia das vacinas e tentar eleger a melhor entre elas pode levar a conclusões enganosas. Isso porque os imunizantes foram desenvolvidos a partir de técnicas diferentes e testados em momentos, locais e em populações com nível de exposição ao vírus diferentes. Houve rigor científico em todos os testes e dados que comprovaram segurança e eficácia.\n\nAinda assim, a variedade de imunizantes disponíveis costuma causar dúvidas sobre aplicação, armazenamento, tecnologia empregada e intervalo entre as doses. Veja abaixo as diferenças entre as vacinas já aprovadas no país e confira a tabela com os principais dados.</string>
    <string name="about_vaccine_coronavac_title">CoronaVac</string>
    <string name="about_vaccine_coronavac_text">A vacina do Butantan utiliza a tecnologia de vírus inativado (morto), uma técnica consolidada há anos e amplamente estudada. Ao ser injetado no organismo, esse vírus não é capaz de causar doença, mas induz uma resposta imunológica. Os ensaios clínicos da CoronaVac no Brasil foram realizados exclusivamente com profissionais da saúde, ou seja, pessoas com alta exposição ao vírus.</string>
    <string name="about_vaccine_astrazeneca_title">AstraZeneca</string>
    <string name="about_vaccine_astrazeneca_text">Foi desenvolvida pela farmacêutica AstraZeneca em parceria com a universidade de Oxford. No Brasil, é produzida pela Fundação Oswaldo Cruz (Fiocruz). A tecnologia empregada é o uso do chamado vetor viral. O adenovírus, que infecta chimpanzés, é manipulado geneticamente para que seja inserido o gene da proteína “Spike” (proteína “S”) do Sars-CoV-2.</string>
    <string name="about_vaccine_pfizer_title">Pfizer</string>
    <string name="about_vaccine_pfizer_text">O imunizante da farmacêutica Pfizer em parceria com o laboratório BioNTech se baseia na tecnologia de RNA mensageiro, ou mRNA. O RNA mensageiro sintético dá as instruções ao organismo para a produção de proteínas encontradas na superfície do novo coronavírus, que estimulam a resposta do sistema imune.</string>
    <string name="about_vaccine_janssen_title">Janssen</string>
    <string name="about_vaccine_janssen_text"><![CDATA[Do grupo Johnson & Johnson, a vacina do laboratório Janssen é aplicada em apenas uma dose, mas ainda não está disponível no Brasil. Assim como o imunizante da Astrazeneca, também se utiliza da tecnologia de vetor viral, baseado em um tipo específico de adenovírus que foi geneticamente modificado para não se replicar em humanos.]]></string>

</resources>